temi title added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TemiDummyApp</string>
+    <string name="temi_title">TEMI DUMMY • 1920×1200</string>
 </resources>
